--- a/src/humangov-florida.yaml
+++ b/src/humangov-florida.yaml
@@ -15,7 +15,7 @@ spec:
       serviceAccountName: humangov-pod-execution-role
       containers:
       - name: humangov-python-app-florida
-        image: public.ecr.aws/n0e9h5z8/humangov-app:latest
+        image: CONTAINER_IMAGE
         env:
         - name: AWS_BUCKET
           value: "humangov-florida-s3-hlbs"
